# mcp-for-api

./: Dockerfile  README.md  pyproject.toml  server.json  smithery.yaml
.cursor/: mcp.json
.github/workflows/: ci.yml  publish.yml
src/mcp_server_appwrite/: __init__.py  __main__.py  operator.py  server.py  service.py  tool_manager.py
tests/: test_all.py
tests/integration/: support.py  test_avatars.py  test_functions.py  test_locale.py  test_messaging.py  test_operator.py  test_sites.py  test_storage.py  test_tables_db.py  test_teams.py  test_users.py
tests/unit/: test_operator.py  test_server.py  test_service.py
