[project]
name = "mcp-server-appwrite"
version = "0.3.3"
description = "MCP (Model Context Protocol) server for Appwrite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appwrite>=13.4.1",
    "docstring-parser>=0.16",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
integration = [
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.1.2",
    "passlib>=1.7.4",
    "pycryptodome>=3.20.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]

[project.scripts]
mcp-server-appwrite = "mcp_server_appwrite.__main__:main"

[tool.black]
target-version = ["py312"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
